--- a/views/frontpage.html
+++ b/views/frontpage.html
@@ -4,6 +4,6 @@
   <input type="text" ng-model="name" />
   <br />
   <ul>
-    <li ng-repeat="cust in customers | filter: name"> {{ cust.name }} - {{cust.city}}</li>
+    <li ng-repeat="cust in customers | filter: name | orderBy: 'city'"> {{ cust.name }} - {{cust.city}}</li>
   </ul>
 </div>
