sma efni komið á síðuna

--- a/views/about.html
+++ b/views/about.html
@@ -1,2 +1,12 @@
-<h1>ABOUT PAGE</h1>
-<p>Eigandi: {{ Freyr }} </p>
+
+<div class='container'>
+	<center><h1>Um Kulygin</h1></center>
+	<div class='row well col-md-8 col-md-offset-2'>
+		<div>
+			Kulygin var stofnað af Friðfinni Hermannssyni árið 2014. Friðfinnur hefur starfað sem ráðgjafi síðan 2007. Fyrst hjá Capacent til ársins 2011 og síðan hjá Gekon til ársins 2014 en hefur verið sjálfstætt starfandi síðan. Frá 1994 til 2007 var Friðfinnur framkvæmdastjóri Heilbrigðisstofnunar Þingeyinga.
+		</div></br>
+		<div>
+			Friðfinnur útskrifaðist sem viðskiptafræðingur frá Háskóla Íslands (Cand Oecon) árið 1989 og með meistaragráðu í stjórnun heilbrigðisþjónustu og lýðheilsu (EMPH) frá Háskólanum í Reykjavík árið 2010.
+		</div>
+	</div>
+</div>
