--- a/views/contact.html
+++ b/views/contact.html
@@ -1,4 +1,3 @@
-<h1>Contact me</h1>
-<strong>Phone: {{phone}} </strong><br>
-<strong>Email: {{email}} </strong><br>
-<strong>Fax: {{fax}} </strong><br>
+<h1>Hafðu samband</h1>
+<strong>Sími: {{phone}} </strong><br>
+<strong>Netfang: {{email}} </strong><br>
