--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -264,6 +264,7 @@ th {
     border: 1px solid #ddd !important;
   }
 }
+
 @font-face {
   font-family: 'Glyphicons Halflings';
 
@@ -3052,7 +3053,7 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
   color: #333;
-  background-color: #e6e6e6;
+  background-color: #a21a1a;
   border-color: #adadad;
 }
 .btn-default:active,
@@ -3458,7 +3459,7 @@ tbody.collapse.in {
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
-  background-color: #e5e5e5;
+  background-color: #a21a1a;
 }
 .dropdown-menu > li > a {
   display: block;
@@ -4551,7 +4552,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     border-color: #400707;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-    background-color: #080808;
+    background-color: #a21a1a;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #9d9d9d;
