--- a/views/frontpage.html
+++ b/views/frontpage.html
@@ -1,41 +1,44 @@
 <div class='container'>
 	<center><h1>Kulygin ráðgjöf</h1></center>
 	<div class='row well'>
-		<div class='col-md-4'>
-			<h4>Ráðgjafarverkefni</h4>
-			<span>Heilbrigðismál</span>
-			<ul>
-				<li>Heilbrigðisstofnanir</li>
-				<li>Sveitarfélög</li>
-				<li>Ráðuneyti</li>
-				<li>Einkafyrirtæki</li>
-				<li>Iceland Health</li>
-			</ul>
-			<span>Samstarfsaðilar</span>
-			<ul>
-				<li>Erlingur Jóhanns</li>
-				<li>Ásgeir Theódórs</li>
-			</ul>
-			<p>Stefnumótun</p>
-			<p>Liðsheild</p>
-			<p>Ferðaþjónusta</p>
-			<p>Opinber stjórnsýsla</p>
-			<p>Sveitarstjórnarmál</p>
-			<p>Klasastjórnun</p>
-		</div>
-		<div class='col-md-4'>
-			<h4>Viðburðarstjórnun</h4>
-			<p>Verkstýring lítilla hópa</p>
-			<p>Skipulagning og stýring stærri viðburða</p>
-			<p>Veislustjórnun</p>
-		</div>
-		<div class='col-md-4'>
-			<h4>Reynsla</h4>
-			<p>Stjórnarsetur</p>
-			<p>Stjórnunarreynsla</p>
-			<p>Félagsmál</p>
-			<p>Leiklist</p>
-			<p>Íþróttir</p>
+		<img src='../Kulygin.png' class='col-md-10 col-md-offset-1' style='margin-top:20px; margin-bottom:20px;' height="450">
+		<div class='col-md-10 col-md-offset-1'>
+			<div class='col-md-4'>
+				<h4>Ráðgjafarverkefni</h4>
+				<span>Heilbrigðismál</span>
+				<ul>
+					<li>Heilbrigðisstofnanir</li>
+					<li>Sveitarfélög</li>
+					<li>Ráðuneyti</li>
+					<li>Einkafyrirtæki</li>
+					<li>Iceland Health</li>
+				</ul>
+				<span>Samstarfsaðilar</span>
+				<ul>
+					<li>Erlingur Jóhanns</li>
+					<li>Ásgeir Theódórs</li>
+				</ul>
+				<p>Stefnumótun</p>
+				<p>Liðsheild</p>
+				<p>Ferðaþjónusta</p>
+				<p>Opinber stjórnsýsla</p>
+				<p>Sveitarstjórnarmál</p>
+				<p>Klasastjórnun</p>
+			</div>
+			<div class='col-md-4'>
+				<h4>Viðburðarstjórnun</h4>
+				<p>Verkstýring lítilla hópa</p>
+				<p>Skipulagning og stýring stærri viðburða</p>
+				<p>Veislustjórnun</p>
+			</div>
+			<div class='col-md-4'>
+				<h4>Reynsla</h4>
+				<p>Stjórnarsetur</p>
+				<p>Stjórnunarreynsla</p>
+				<p>Félagsmál</p>
+				<p>Leiklist</p>
+				<p>Íþróttir</p>
+			</div>
 		</div>
 	</div>
 </div>
